# Voxarium

./: .gitignore  README.md  pyproject.toml  voxarium.md
app/application/: __init__.py  application.py  constants.py  logger.py  paths.py
app/core/: config.py  logger.py
config/: config.json
spec/: Architecture_Map.md
spec/000_Foundation/: Architecture_Overview.md  Architecture_Principles.md  Bounded_Contexts.md  Coding_Standards.md  Component_Model.md  Dependency_Rules.md  Documentation_Index.md  Error_Model.md  Event_Model.md  Glossary.md  Layered_Architecture.md  Naming_Conventions.md  Repository_Structure.md  SAS-000_Project_Philosophy.md  SAS-001_Glossary.md  SAS-002_Domain_Ontology.md  SAS-003_Architecture_Principles.md  SAS-004_Quality_Attributes.md  SAS-005_Architecture_Decision_Process.md  SAS-006_Common_Domain_Patterns.md  SAS-007_Module_Architecture.md  SAS-008_Document_Template.md  System_Context.md  Terminology.md
spec/100_Domain/: Asset.md  AudioAsset.md  AudioFragment.md  AudioGenerationJob.md  AudioGenerationPreset.md  AudioProfile.md  AudioSegment.md  AudioTrack.md  Bookmark.md  Chapter.md  Character.md  Collection.md  Cue.md  Dictionary.md  DictionaryEntry.md  Document.md  DocumentMetadata.md  DocumentStatistics.md  Emotion.md  EmotionPreset.md  ExportJob.md  ExportProfile.md  Folder.md  Fragment.md  FragmentGroup.md  GenerationHistory.md  GenerationPreset.md  GenerationResult.md  GenerationSession.md  ImportJob.md  Job.md  Language.md  Lexicon.md  LexiconEntry.md  Marker.md  Metadata.md  Note.md  PhonemeRule.md  PlaybackProfile.md  PluginManifest.md  (+38 more)
spec/200_Application/: ApplicationClock.md  (+118 more)
(+82 files in other folders)
