[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxarium"
version = "0.1.0"
description = "Offline modular platform for speech synthesis and voice management."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Gremuar" }
]

keywords = [
    "tts",
    "speech",
    "voice",
    "xtts",
    "edge-tts",
    "audiobook"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",

    "jinja2>=3.1.6",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",

    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",

    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",

    "loguru>=0.7.3"
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",

    "ruff>=0.13.0",
    "mypy>=1.18.1",

    "types-aiofiles"
]

[tool.ruff]

line-length = 100
target-version = "py312"

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.ruff.format]

quote-style = "double"

indent-style = "space"

[tool.mypy]

python_version = "3.12"

strict = true

warn_unused_configs = true

warn_return_any = true

warn_unreachable = true

plugins = []

[tool.pytest.ini_options]

pythonpath = [
    "."
]

testpaths = [
    "tests"
]